tests/ui/const-generics/legacy-const-generics-bad.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/legacy-const-generics-bad.rs:7:35
   |
LL |     legacy_const_generics::foo(0, a, 2);
   |                                   ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let a = 1;
LL +     const a: /* Type */ = 1;
   |

error: generic parameters may not be used in const operations
  --> $DIR/legacy-const-generics-bad.rs:12:35
   |
LL |     legacy_const_generics::foo(0, N + 1, 2);
   |                                   ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0435`.
